--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | News homepage</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <header class="container header">
+  <img src="./assets/images/logo.svg" alt="logo">
+  <ul class="nav">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">New</a></li>
+    <li><a href="#">Popular</a></li>
+    <li><a href="#">Trending</a></li>
+    <li><a href="#">Categories</a></li>
+</ul>
+</header>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
-
+<main class="container">
   The Bright Future of Web 3.0?
 
   We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
@@ -38,7 +38,11 @@
   What are the possible adverse effects of on-demand AI image generation?
 
   Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
+  Private funding by VC firms is down 50% 
+</main>
+
+<section class="container">
+  YOY. We take a look at what that means.
 
   01
   Reviving Retro PCs
@@ -51,10 +55,6 @@
   03
   The Growth of Gaming
   How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+</section>
 </body>
 </html>
